# samtools-metrics-sqlite

./: .secrets.baseline  .travis.yml  Dockerfile  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docker/: Dockerfile
samtools_metrics_sqlite/: __init__.py  __main__.py  main.py
samtools_metrics_sqlite/metrics/: samtools_flagstat.py  samtools_idxstats.py  samtools_stats.py
tests/: test_main.py
